* 2014-01-13 - jan.bauerdick@open-xchange.com

 - Fix for bug 30607: Use https instead of http

* 2014-01-13 - martin.herfurth@open-xchange.com

 - Fix for bug 29807: Missing confirmations status of participants in update mail and bad check for last modified.

* 2014-01-10- jan.bauerdick@open-xchange.com

 - Fix for bug 30544: sanitizefilemimetypes.in was located in 2 bundles (c.o.oxscripts.clt & oxscripts).
                      Deleted it from oxscripts.

* 2014-01-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29950: Respond with HTTP 401 Unauthorized in case of access restrictions  
 - Fix for bug 30552: Allow UNLOCK for WebDAV resources only for the lock-owning user and the context administrator 

* 2014-01-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 30549: Don't try and guess mime type from empty stream

* 2014-01-09 - thorben.betten@open-xchange.com

 - Fix for bug 29639: Use configured default charset to url-decode incoming requests' URIs
 - Fix for bug 30555: Fixed possible NPE through adding null guards and check for missing "pattern" in jSON layer, too

* 2014-01-08 - thorben.betten@open-xchange.com

 - Fix for bug 30524: Fixed customizing of anchor's CSS selector

* 2014-01-07 - martin.herfurth@open-xchange.com

 - Fix for bug 30411: Bad conflict handling (Follow up of Bugfix #30118).

* 2014-01-07 - thorben.betten@open-xchange.com

 - Fix for bug 30439: Try to recover from "NO Unknown namespace" IMAP error on standard folder check

* 2014-01-07 - martin.schneider@open-xchange.com

 - Fix for bug 30461: Only overwrite log levels if they are coarser than INFO.

* 2014-01-06 - thorben.betten@open-xchange.com

 - Fix for bug 30467: Terminate "logconf" with status code 1 on success
 - Fix for bug 30468: Indicate '0' status code on success
 - Fix for bug 30464: Fixed description of 'clearpreviewcache' options
 - Fix for bug 30480: Do not close DB connection too early