@@ -1,3 +1,7 @@
+* 2014-01-13 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30571: Load snippet attributes from database, do not parse them from MIME content
+
 * 2014-01-13 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 30607: Use https instead of http
